2012-03-12 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Titel fuer die Sortierung entfernt und Sortierung nach Sigeln vorgenommen (WWW-1144)
	* Layout der Single Ansicht optimiert (WWW-1102)

2012-03-05 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Titel der Detailseiten geaendert (WWW-1103)
	* Linkbezeichnung geaendert (WWW-1102)
	* Manual aktualisiert

2012-02-01 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Layout der Einzelansicht verbessert (WWW-1102)

2011-12-20 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Sigelliste angepasst (WWW-1047)
	* Aktuelle, kompatible Library integriert (WWW-1047)

2011-11-28 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Versionierung hinzugefuegt

2011-11-24 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Verlinkung zu den Bibliothekswebsites angepasst (WWW-909)

2011-11-23 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Suche im Backend TYPO3 4.6. kompatibel gestaltet (WWW-896)

2011-11-09 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Einfuegen der Strasse in die Liste der Links fuer Antje Niemann (WWW-657)

2011-10-31 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Anpassung der Links auf die Bibliotheken im vorgegebenen Schnema (WWW-657)

2011-10-12 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* CSS Formatierung bei der Listenansicht optimiert

2011-09-28 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Cleanups und Erweiterungen

2011-09-22 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Anpassung der Bibliotheksliste an die Vorgaben aus dem CSV (WWW-657)
	* Optimierungen im Code

2011-09-21 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Neue Action listBibMitLink zur einfachen Ausgabe der Links und Titel der Bibliotheken (WWW-657)

2011-09-02 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Optimierung der CSS Einbindung
	* Optimierung der Js Einbindung